kubernetes/apps/actual.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: actual
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual
  namespace: actual
  labels:
    app.kubernetes.io/name: actual
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: actual
  template:
    metadata:
      name: actual
      labels:
        app.kubernetes.io/name: actual
    spec:
      containers:
        - name: actual
          image: ghcr.io/actualbudget/actual:25.4.0
          imagePullPolicy: Always
          volumeMounts:
            - name: actual-data
              mountPath: /data
          resources:
            requests:
              cpu: 26m
              memory: 170Mi
            limits:
              memory: 170Mi
      volumes:
        - name: actual-data
          persistentVolumeClaim:
            claimName: actual-data
---
apiVersion: v1
kind: Service
metadata:
  name: actual
  namespace: actual
  labels:
    app.kubernetes.io/name: actual
spec:
  type: ClusterIP
  ports:
    - name: web-ui
      port: 5006
  selector:
    app.kubernetes.io/name: actual
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-private
  namespace: actual
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - actual.homelab-peej.dev
      secretName: actual-internal-tls-secret
  rules:
    - host: actual.homelab-peej.dev
      http:
        paths:
          - backend:
              service:
                name: actual
                port:
                  number: 5006
            path: /
            pathType: Prefix
