kubernetes/apps/homeassistant.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app.kubernetes.io/name: homeassistant
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: homeassistant
  template:
    metadata:
      name: homeassistant
      labels:
        app.kubernetes.io/name: homeassistant
    spec:
      containers:
        - name: homeassistant
          image: ghcr.io/home-assistant/home-assistant:2025.4.3
          imagePullPolicy: Always
          volumeMounts:
            - name: hass-config
              mountPath: /config
            - name: config-file
              mountPath: /config/configuration.yaml
              subPath: configuration.yaml
          resources:
            requests:
              cpu: 2m
              memory: 454Mi
            limits:
              memory: 454Mi
        - name: zwave-js-ui
          image: ghcr.io/zwave-js/zwave-js-ui:10.2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8091
              name: http
              protocol: TCP
            - containerPort: 3000
              name: websocket
              protocol: TCP
          resources:
            requests:
              cpu: 2m
              memory: 234Mi
            limits:
              memory: 234Mi
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
          volumeMounts:
            - mountPath: /dev/zwave
              name: zwavestick
            - mountPath: /usr/src/app/store
              name: zwave-data
      nodeSelector:
        kubernetes.io/hostname: k8s-30-8vx9q
      volumes:
        - name: hass-config
          persistentVolumeClaim:
            claimName: hass-config
        - name: config-file
          configMap:
            name: homeassistant-configuration
        - name: zwavestick
          hostPath:
            path: /dev/serial/by-id/usb-0658_0200-if00
            type: CharDevice
        - name: zwave-data
          persistentVolumeClaim:
            claimName: zwave-data
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app.kubernetes.io/name: homeassistant
spec:
  type: ClusterIP
  ports:
    - name: web-ui
      port: 8123
    - name: websocket
      port: 3000
    - name: zwave-web-ui
      port: 8091
  selector:
    app.kubernetes.io/name: homeassistant
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-private
  namespace: homeassistant
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - homeassistant.homelab-peej.dev
      secretName: homeassistant-internal-tls-secret
  rules:
    - host: homeassistant.homelab-peej.dev
      http:
        paths:
          - backend:
              service:
                name: homeassistant
                port:
                  number: 8123
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zwave-private
  namespace: homeassistant
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - zwave.homelab-peej.dev
      secretName: zwave-internal-tls-secret
  rules:
    - host: zwave.homelab-peej.dev
      http:
        paths:
          - backend:
              service:
                name: homeassistant
                port:
                  number: 8091
            path: /
            pathType: Prefix
