kubernetes/apps/jellyfin.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
    app_name: jellyfin
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app_name: jellyfin
  template:
    metadata:
      name: jellyfin
      labels:
        app: jellyfin
        app_name: jellyfin
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/arch
                  operator: In
                  values:
                    - amd64
      containers:
        - name: jellyfin
          image: ghcr.io/jellyfin/jellyfin:10.10.6
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 1600m
              memory: 1893Mi
            limits:
              memory: 1893Mi
          volumeMounts:
            - name: media
              mountPath: /media
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: transcode
              mountPath: /transcode
            - name: quicksync
              mountPath: /dev/dri
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: jellyfin-media
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: cache
          persistentVolumeClaim:
            claimName: jellyfin-cache
        - name: transcode
          emptyDir:
            sizeLimit: 8Gi
        - name: quicksync
          hostPath: 
            path: /dev/dri
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app_name: jellyfin
spec:
  type: ClusterIP
  ports:
    - name: web-ui
      port: 8096
  selector:
    app_name: jellyfin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-private
  namespace: jellyfin
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - jellyfin.homelab-peej.dev
      secretName: jellyfin-internal-tls-secret
  rules:
    - host: jellyfin.homelab-peej.dev
      http:
        paths:
          - backend:
              service:
                name: jellyfin
                port:
                  number: 8096
            path: /
            pathType: Prefix
