kubernetes/apps/mealie.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mealie
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: mealie
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mealie
    spec:
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v2.8.0
          imagePullPolicy: Always
          command:
            - /app/run.sh
          volumeMounts:
            - mountPath: /app/data
              name: mealie
          workingDir: /
          resources:
            requests:
              cpu: 2m
              memory: 428Mi
            limits:
              memory: 428Mi
      restartPolicy: Always
      volumes:
        - name: mealie
          persistentVolumeClaim:
            claimName: mealie
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
  labels:
    app.kubernetes.io/name: mealie
spec:
  type: ClusterIP
  ports:
    - name: web-ui
      port: 9000
  selector:
    app.kubernetes.io/name: mealie
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-private
  namespace: mealie
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mealie.homelab-peej.dev
      secretName: mealie-internal-tls-secret
  rules:
    - host: mealie.homelab-peej.dev
      http:
        paths:
          - backend:
              service:
                name: mealie
                port:
                  number: 9000
            path: /
            pathType: Prefix
