kubernetes/apps/tautulli.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tautulli
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  namespace: tautulli
  labels:
    app.kubernetes.io/name: tautulli
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: tautulli
  template:
    metadata:
      name: tautulli
      labels:
        app.kubernetes.io/name: tautulli
    spec:
      containers:
        - name: tautulli
          image: ghcr.io/tautulli/tautulli:v2.15.1
          imagePullPolicy: Always
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: 1m
              memory: 220Mi
            limits:
              memory: 220Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
---
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: tautulli
  labels:
    app.kubernetes.io/name: tautulli
spec:
  type: ClusterIP
  ports:
    - name: web-ui
      port: 8181
  selector:
    app.kubernetes.io/name: tautulli
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli-private
  namespace: tautulli
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - tautulli.homelab-peej.dev
      secretName: tautulli-internal-tls-secret
  rules:
    - host: tautulli.homelab-peej.dev
      http:
        paths:
          - backend:
              service:
                name: tautulli
                port:
                  number: 8181
            path: /
            pathType: Prefix
